opam-version: "1.2"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg"]
homepage: "https://github.com/rgrinberg/json-derivers"
bug-reports: "https://github.com/rgrinberg/json-derivers/issues"
dev-repo: "https://github.com/rgrinberg/json-derivers.git"
license: "ISC"
tags: ["deriving" "json"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.0"}
  "base"
]
available: [ocaml-version >= "4.03.0"]
